fix spacing on css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -274,6 +274,8 @@ width: 200px;
   background-color: #FFFFFF;
   padding: .5em;
   margin-top: auto;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .activities-name {
@@ -328,6 +330,7 @@ width: 200px;
     img { width: 100% };
     margin-top: 12.5px;
     margin-bottom: auto;
+    margin-left: -12.5px;
 }
 
 #message{
